Mid content alignment fix

--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ header{
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    align-items: center;
     padding: 80px;
+    gap: 80px;
 }
 
 .uppercontent, header, footer{
@@ -53,8 +55,8 @@ header{
 }
 
 .uppercontent img{
-    max-width: 500px;
-    max-height: 250px;
+    max-width: 700px;
+    max-height: 350px;
     border-radius: 10px;
 }
 
